    acquire a DHCP lease.
  [ Colin Watson ]
  * Update GPL notices with the FSF's new address.
  * Reword a couple of templates to avoid unnecessary Debian "branding".
  * Close debconf client output when starting the DHCP client, to avoid the
    DHCP client holding it open.

  [ Joey Hess ]
  * Add description for internal-usb template as used for usb net.

 -- Joey Hess <joeyh@debian.org>  Tue, 16 Aug 2005 16:00:33 -0400

netcfg (1.12) unstable; urgency=low

  [ Joey Hess ]
  * Apply patch from Christian Weeks and Geert Stappers to respect preseeded
    nameserver values. Closes: #315030
  * Similar fix to respect preseeded gateway value. Closes: #314618, #308964
  * Above also Closes: #282650
  * Note that above changes do make netcfg not fill in calculated values if
    the user re-does static network config a second time.
  * Fix spelling of IBM's Hipersocket. Closes: #285124
  * A few interface types seem to be pure product names and not translatable.
    Do not mark these templates as translatable.

  * Updated translations: 
    - Czech (cs.po) by Miroslav Kure
    - French (fr.po) by Christian Perrier
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Portuguese (Brazil) (pt_BR.po) by André Luís Lopes
    - Romanian (ro.po) by Eddy Petrişor
    - Slovak (sk.po) by Peter Mann
    - Albanian (sq.po) by Elian Myftiu

 -- Joey Hess <joeyh@debian.org>  Sun, 26 Jun 2005 11:46:23 -0400

netcfg (1.11) unstable; urgency=low

  [ Joey Hess ]
  * Switch to using libiw28.
  * Add a hack to sed the substvars files to get proper dependency on 
    the libiw udeb w/o a versioned dependency on the deb.
    
  * Updated translations: 
    - Catalan (ca.po) by Guillem Jover
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Basque (eu.po) by Piarres Beobide
    - Portuguese (pt.po) by Miguel Figueiredo
    - Romanian (ro.po) by Eddy Petrişor

 -- Joey Hess <joeyh@debian.org>  Mon, 20 Jun 2005 16:57:39 -0400
